--- a/MainGame/Packages/manifest.json
+++ b/MainGame/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
+    "com.unity.vectorgraphics": "2.0.0-preview.25",
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.accessibility": "1.0.0",
